@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+20-Mar-2011 Jean-Marie Simonet
+ # [#25400] *langswitcher module can display content languages with no specific home page. Thanks Christophe.
+ 
 19-Mar-2011 Jean-Marie Simonet
  #$  [#25349] Menu item type Alias, not editable alias. Thanks Pavel.
 
